# SudokuSolver

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_results.json
docs/: COMMAND_LINE_USAGE.md  IMPROVEMENTS.md  OCR_FUNCTIONALITY.md  SUDOKU_SOLVER_LOGIC.md  application_flow.md
examples/: NYT-EASY-2025-09-27_puzzle.json  demo.py  end_to_end_example.py  nginx_subpath_deployment.conf  sample_puzzles.py
examples/examples_data/: NYT-EASY-2025-09-28_puzzle.json  NYT-FAIL-2025-09-28_puzzle.json  NYT-HARD-2025-09-28_puzzle.json  NYT-MED-2025-09-28_puzzle.json
python/: LICENSE.txt  sudoku.py  test_sudoku.py
scripts/: build-push-fixed.ps1  build-push.ps1  build-push.sh
src/: cli_solver.py  sudoku.py  sudoku_models.py  sudoku_solver.py
src/sudoku_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_all_images.py  test_json_results.json  test_sudoku.py  test_sudoku_json.py
tests/test_data/: NYT-HARD-2025-09-27_puzzle.json  NYT-MED-2025-09-27_puzzle.json  TestData.txt
web/: README-deploy-images.md  README.md  docker-compose.prod.yml  docker-compose.yml
web/backend/: .dockerignore  Dockerfile  app.py  requirements.txt  step_solver.py  test_session_endpoint.py
web/frontend/: .dockerignore  .env.development  .env.production  Dockerfile  Dockerfile.prod  README.md  build.sh  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  config.ts
web/frontend/src/components/: EditableGrid.tsx  HealthCheck.tsx  ResultPanel.tsx  SolutionGrid.tsx  SolveForm.tsx  solveformCSS.tsx
web/frontend/src/services/: api.ts
web/frontend/src/types/: api.ts
web/nginx/: nginx.conf
